--- a/docs/tutorials/build-repetition-codes.ipynb
+++ b/docs/tutorials/build-repetition-codes.ipynb
@@ -55,8 +55,11 @@
    "outputs": [],
    "source": [
     "# Qiskit imports\n",
-    "from qiskit import transpile, QuantumCircuit, QuantumRegister, ClassicalRegister\n",
-    "from qiskit.result import marginal_counts\n",
+    "from qiskit import (\n",
+    "    QuantumCircuit,\n",
+    "    QuantumRegister,\n",
+    "    ClassicalRegister,\n",
+    ")\n",
     "\n",
     "# Qiskit Runtime\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
@@ -101,7 +104,9 @@
    ],
    "source": [
     "num_qubits = 5\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=num_qubits)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=num_qubits\n",
+    ")\n",
     "backend"
    ]
   },
@@ -119,15 +124,18 @@
     "state_data = qreg_data[0]\n",
     "ancillas_data = qreg_data[1:]\n",
     "\n",
+    "\n",
     "def build_qc():\n",
     "    \"\"\"Build a typical error correction circuit\"\"\"\n",
     "    return QuantumCircuit(qreg_data, qreg_measure, creg_data, creg_syndrome)\n",
+    "\n",
     "\n",
     "def initialize_qubits(circuit: QuantumCircuit):\n",
     "    \"\"\"Initialize qubit to |1>\"\"\"\n",
     "    circuit.x(qreg_data[0])\n",
     "    circuit.barrier(qreg_data)\n",
     "    return circuit\n",
+    "\n",
     "\n",
     "def encode_bit_flip(circuit, state, ancillas) -> QuantumCircuit:\n",
     "    \"\"\"Encode bit-flip. This is done by simply adding a cx\"\"\"\n",
@@ -136,15 +144,16 @@
     "    circuit.barrier(state, *ancillas)\n",
     "    return circuit\n",
     "\n",
+    "\n",
     "def measure_syndrome_bit(circuit, qreg_data, qreg_measure, creg_measure):\n",
     "    \"\"\"\n",
-    "        Measure the syndrome by measuring the parity.\n",
-    "        We reset our ancilla qubits after measuring the stabilizer\n",
-    "        so we can reuse them for repeated stabilizer measurements.\n",
-    "        Because we have already observed the state of the qubit,\n",
-    "        we can write the conditional reset protocol directly to\n",
-    "        avoid another round of qubit measurement if we used\n",
-    "        the `reset` instruction.\n",
+    "    Measure the syndrome by measuring the parity.\n",
+    "    We reset our ancilla qubits after measuring the stabilizer\n",
+    "    so we can reuse them for repeated stabilizer measurements.\n",
+    "    Because we have already observed the state of the qubit,\n",
+    "    we can write the conditional reset protocol directly to\n",
+    "    avoid another round of qubit measurement if we used\n",
+    "    the `reset` instruction.\n",
     "    \"\"\"\n",
     "    circuit.cx(qreg_data[0], qreg_measure[0])\n",
     "    circuit.cx(qreg_data[1], qreg_measure[0])\n",
@@ -159,6 +168,7 @@
     "    circuit.barrier(*qreg_data, *qreg_measure)\n",
     "    return circuit\n",
     "\n",
+    "\n",
     "def apply_correction_bit(circuit, qreg_data, creg_syndrome):\n",
     "    \"\"\"We can detect where an error occurred and correct our state\"\"\"\n",
     "    with circuit.if_test((creg_syndrome, 3)):\n",
@@ -169,6 +179,7 @@
     "        circuit.x(qreg_data[2])\n",
     "    circuit.barrier(qreg_data)\n",
     "    return circuit\n",
+    "\n",
     "\n",
     "def apply_final_readout(circuit, qreg_data, creg_data):\n",
     "    \"\"\"Read out the final measurements\"\"\"\n",
@@ -197,20 +208,22 @@
    ],
    "source": [
     "def build_error_correction_sequence(apply_correction: bool) -> QuantumCircuit:\n",
-    "\n",
     "    circuit = build_qc()\n",
     "    circuit = initialize_qubits(circuit)\n",
     "    circuit = encode_bit_flip(circuit, state_data, ancillas_data)\n",
-    "    circuit = measure_syndrome_bit(circuit, qreg_data, qreg_measure, creg_syndrome)\n",
+    "    circuit = measure_syndrome_bit(\n",
+    "        circuit, qreg_data, qreg_measure, creg_syndrome\n",
+    "    )\n",
     "\n",
     "    if apply_correction:\n",
     "        circuit = apply_correction_bit(circuit, qreg_data, creg_syndrome)\n",
     "\n",
-    "    circuit = apply_final_readout(circuit,  qreg_data, creg_data)\n",
+    "    circuit = apply_final_readout(circuit, qreg_data, creg_data)\n",
     "    return circuit\n",
     "\n",
+    "\n",
     "circuit = build_error_correction_sequence(apply_correction=True)\n",
-    "circuit.draw(output=\"mpl\", style='iqp')"
+    "circuit.draw(output=\"mpl\", style=\"iqp\")"
    ]
   },
   {
@@ -264,7 +277,7 @@
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "isa_circuit = pm.run(circuit)\n",
     "\n",
-    "isa_circuit.draw('mpl', style='iqp', idle_wires=False)"
+    "isa_circuit.draw(\"mpl\", style=\"iqp\", idle_wires=False)"
    ]
   },
   {
@@ -274,7 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_correction_circuit = build_error_correction_sequence(apply_correction=False)\n",
+    "no_correction_circuit = build_error_correction_sequence(\n",
+    "    apply_correction=False\n",
+    ")\n",
     "\n",
     "isa_no_correction_circuit = pm.run(no_correction_circuit)"
    ]
@@ -303,7 +318,9 @@
    "outputs": [],
    "source": [
     "sampler_no_correction = Sampler(backend)\n",
-    "job_no_correction = sampler_no_correction.run([isa_no_correction_circuit], shots=1000)\n",
+    "job_no_correction = sampler_no_correction.run(\n",
+    "    [isa_no_correction_circuit], shots=1000\n",
+    ")\n",
     "result_no_correction = job_no_correction.result()[0]"
    ]
   },
@@ -342,7 +359,9 @@
    ],
    "source": [
     "print(f\"Data (no correction):\\n{result_no_correction.data.data.get_counts()}\")\n",
-    "print(f\"Syndrome (no correction):\\n{result_no_correction.data.syndrome.get_counts()}\")"
+    "print(\n",
+    "    f\"Syndrome (no correction):\\n{result_no_correction.data.syndrome.get_counts()}\"\n",
+    ")"
    ]
   },
   {
@@ -364,7 +383,9 @@
    ],
    "source": [
     "print(f\"Data (corrected):\\n{result_with_correction.data.data.get_counts()}\")\n",
-    "print(f\"Syndrome (corrected):\\n{result_with_correction.data.syndrome.get_counts()}\")"
+    "print(\n",
+    "    f\"Syndrome (corrected):\\n{result_with_correction.data.syndrome.get_counts()}\"\n",
+    ")"
    ]
   },
   {
@@ -390,11 +411,15 @@
    "source": [
     "def decode_result(data_counts, syndrome_counts):\n",
     "    shots = sum(data_counts.values())\n",
-    "    success_trials = data_counts.get('000', 0) + data_counts.get('111', 0)\n",
+    "    success_trials = data_counts.get(\"000\", 0) + data_counts.get(\"111\", 0)\n",
     "    failed_trials = shots - success_trials\n",
-    "    error_correction_events = shots - syndrome_counts.get('00', 0)\n",
-    "    print(f\"Bit flip errors were detected/corrected on {error_correction_events}/{shots} trials.\")\n",
-    "    print(f\"A final parity error was detected on {failed_trials}/{shots} trials.\")"
+    "    error_correction_events = shots - syndrome_counts.get(\"00\", 0)\n",
+    "    print(\n",
+    "        f\"Bit flip errors were detected/corrected on {error_correction_events}/{shots} trials.\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"A final parity error was detected on {failed_trials}/{shots} trials.\"\n",
+    "    )"
    ]
   },
   {
@@ -419,8 +444,12 @@
     "data_result = result_no_correction.data.data.get_counts()\n",
     "marginalized_syndrome_result = result_no_correction.data.syndrome.get_counts()\n",
     "\n",
-    "print(f'Completed bit code experiment data measurement counts (no correction): {data_result}')\n",
-    "print(f'Completed bit code experiment syndrome measurement counts (no correction): {marginalized_syndrome_result}')\n",
+    "print(\n",
+    "    f\"Completed bit code experiment data measurement counts (no correction): {data_result}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Completed bit code experiment syndrome measurement counts (no correction): {marginalized_syndrome_result}\"\n",
+    ")\n",
     "decode_result(data_result, marginalized_syndrome_result)"
    ]
   },
@@ -446,8 +475,12 @@
     "corrected_data_result = result_with_correction.data.data.get_counts()\n",
     "corrected_syndrome_result = result_with_correction.data.syndrome.get_counts()\n",
     "\n",
-    "print(f'Completed bit code experiment data measurement counts (corrected): {corrected_data_result}')\n",
-    "print(f'Completed bit code experiment syndrome measurement counts (corrected): {corrected_syndrome_result}')\n",
+    "print(\n",
+    "    f\"Completed bit code experiment data measurement counts (corrected): {corrected_data_result}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Completed bit code experiment syndrome measurement counts (corrected): {corrected_syndrome_result}\"\n",
+    ")\n",
     "decode_result(corrected_data_result, corrected_syndrome_result)"
    ]
   },
@@ -470,11 +503,9 @@
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
-   "title": "Build repetition codes",
- "description": "This tutorial demonstrates how to build basic repetition codes using IBM dynamic circuits, an example of basic quantum error correction (QEC).",
- "platform": "cloud",
+  "description": "This tutorial demonstrates how to build basic repetition codes using IBM dynamic circuits, an example of basic quantum error correction (QEC).",
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -488,8 +519,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
-  }
+   "version": "3"
+  },
+  "platform": "cloud",
+  "title": "Build repetition codes"
  },
  "nbformat": 4,
  "nbformat_minor": 5
