--- a/docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
+++ b/docs/tutorials/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Combine error mitigation options with the Estimator primitive\n",
-    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*\n",
-    "\n"
+    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c8e8f022-2450-401f-8b7b-d3673be9f871",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -23,12 +23,12 @@
     "- Dynamical decoupling\n",
     "- Measurement error mitigation\n",
     "- Gate twirling\n",
-    "- Zero-noise extrapolation (ZNE)\n",
-    "\n"
+    "- Zero-noise extrapolation (ZNE)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "964b8213-f852-4ab6-95bf-c57f4127af86",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -41,6 +41,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0169882-5dfe-4db7-b951-14254d02114d",
    "metadata": {},
    "source": [
     "## Setup"
@@ -49,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44cb7018-2fbd-46f8-81e3-ceb919d07362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +62,7 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit_ibm_runtime import Batch, EstimatorV2 as Estimator\n",
-    "\n"
+    "from qiskit_ibm_runtime import Batch, EstimatorV2 as Estimator"
    ]
   },
   {
@@ -119,7 +120,9 @@
    "outputs": [],
    "source": [
     "# Z on the last qubit (index -1) with coefficient 1.0\n",
-    "observable = SparsePauliOp.from_sparse_list([(\"Z\", [-1], 1.0)], num_qubits=n_qubits)"
+    "observable = SparsePauliOp.from_sparse_list(\n",
+    "    [(\"Z\", [-1], 1.0)], num_qubits=n_qubits\n",
+    ")"
    ]
   },
   {
@@ -198,7 +201,9 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -377,13 +382,22 @@
     "pub_results = [result[0] for result in results]\n",
     "\n",
     "# Unpack the expectation values and standard errors\n",
-    "expectation_vals = np.array([float(pub_result.data.evs) for pub_result in pub_results])\n",
-    "standard_errors = np.array([float(pub_result.data.stds) for pub_result in pub_results])\n",
+    "expectation_vals = np.array(\n",
+    "    [float(pub_result.data.evs) for pub_result in pub_results]\n",
+    ")\n",
+    "standard_errors = np.array(\n",
+    "    [float(pub_result.data.stds) for pub_result in pub_results]\n",
+    ")\n",
     "\n",
     "# Plot the expectation values\n",
     "fig, ax = plt.subplots()\n",
     "labels = [\"No mitigation\", \"+ DD\", \"+ TREX\", \"+ Twirling\", \"+ ZNE\"]\n",
-    "ax.bar(range(len(labels)), expectation_vals, yerr=standard_errors, label=\"experiment\")\n",
+    "ax.bar(\n",
+    "    range(len(labels)),\n",
+    "    expectation_vals,\n",
+    "    yerr=standard_errors,\n",
+    "    label=\"experiment\",\n",
+    ")\n",
     "ax.axhline(y=1.0, color=\"gray\", linestyle=\"--\", label=\"ideal\")\n",
     "ax.set_xticks(range(len(labels)))\n",
     "ax.set_xticklabels(labels)\n",
@@ -434,7 +448,9 @@
     "\n",
     "# Construct circuit and observable\n",
     "circuit = EfficientSU2(n_qubits, entanglement=\"pairwise\", reps=reps)\n",
-    "observable = SparsePauliOp.from_sparse_list([(\"Z\", [-1], 1.0)], num_qubits=n_qubits)\n",
+    "observable = SparsePauliOp.from_sparse_list(\n",
+    "    [(\"Z\", [-1], 1.0)], num_qubits=n_qubits\n",
+    ")\n",
     "\n",
     "# Assign parameters to circuit\n",
     "params = rng.uniform(-np.pi, np.pi, size=circuit.num_parameters)\n",
@@ -495,13 +511,22 @@
     "pub_results = [result[0] for result in results]\n",
     "\n",
     "# Unpack the expectation values and standard errors\n",
-    "expectation_vals = np.array([float(pub_result.data.evs) for pub_result in pub_results])\n",
-    "standard_errors = np.array([float(pub_result.data.stds) for pub_result in pub_results])\n",
+    "expectation_vals = np.array(\n",
+    "    [float(pub_result.data.evs) for pub_result in pub_results]\n",
+    ")\n",
+    "standard_errors = np.array(\n",
+    "    [float(pub_result.data.stds) for pub_result in pub_results]\n",
+    ")\n",
     "\n",
     "# Plot the expectation values\n",
     "fig, ax = plt.subplots()\n",
     "labels = [\"No mitigation\", \"+ DD\", \"+ TREX\", \"+ Twirling\", \"+ ZNE\"]\n",
-    "ax.bar(range(len(labels)), expectation_vals, yerr=standard_errors, label=\"experiment\")\n",
+    "ax.bar(\n",
+    "    range(len(labels)),\n",
+    "    expectation_vals,\n",
+    "    yerr=standard_errors,\n",
+    "    label=\"experiment\",\n",
+    ")\n",
     "ax.axhline(y=1.0, color=\"gray\", linestyle=\"--\", label=\"ideal\")\n",
     "ax.set_xticks(range(len(labels)))\n",
     "ax.set_xticklabels(labels)\n",
@@ -529,6 +554,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d55d58a9-ee64-438e-bb17-15969ac43799",
    "metadata": {},
    "source": [
     "## Tutorial Survey\n",
@@ -544,6 +570,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8097f7e1-0e8c-4d49-b0a2-9aeb8d706660",
    "metadata": {},
    "source": [
     "© IBM Corp. 2024"
@@ -551,9 +578,7 @@
   }
  ],
  "metadata": {
-   "title": "Combine error mitigation options with the Estimator primitive",
- "description": "Combine error mitigation options for utility-scale experiments using 100Q+ IBM Quantum systems and the Qiskit Runtime Estimator primitive.",
- "platform": "cloud",
+  "description": "Combine error mitigation options for utility-scale experiments using 100Q+ IBM Quantum systems and the Qiskit Runtime Estimator primitive.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -570,7 +595,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "platform": "cloud",
+  "title": "Combine error mitigation options with the Estimator primitive"
  },
  "nbformat": 4,
  "nbformat_minor": 4
