--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Improving estimation of expectation values with Operator Backpropagation (OBP)\n",
-    "*Usage estimate: 16 minutes on IBM Nazca (NOTE: This is an estimate only. Your runtime may vary.)*\n"
+    "*Usage estimate: 16 minutes on IBM Nazca (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "Operator backpropagation is a technique which involves absorbing operations from the end of a quantum circuit into the measured observable, generally reducing the depth of the circuit at the cost of additional terms in the observable. The goal is to backpropagate as much of the circuit as possible without allowing the observable to grow too large. A Qiskit-based implementation is available in the OBP Qiskit addon, more details can be found in the corresponding [docs](https://docs.quantum.ibm.com/guides/qiskit-addons-obp) with a [simple example](https://docs.quantum.ibm.com/guides/qiskit-addons-obp-get-started) to get started. \n",
+    "Operator backpropagation is a technique which involves absorbing operations from the end of a quantum circuit into the measured observable, generally reducing the depth of the circuit at the cost of additional terms in the observable. The goal is to backpropagate as much of the circuit as possible without allowing the observable to grow too large. A Qiskit-based implementation is available in the OBP Qiskit addon, more details can be found in the corresponding [docs](https://docs.quantum.ibm.com/guides/qiskit-addons-obp) with a [simple example](https://docs.quantum.ibm.com/guides/qiskit-addons-obp-get-started) to get started.\n",
     "\n",
     "Consider an example circuit for which an observable $O = \\sum_P c_P P$ is to be measured, where $P$ are Paulis and $c_P$ are coefficients. Let us denote the circuit as a single unitary $U$ which can be logically partitioned into $U = U_C U_Q$ as shown in the figure below.\n",
     "\n",
@@ -24,7 +24,7 @@
     "\n",
     "Operator backpropagation absorbs the unitary $U_C$ into the observable by evolving it as $O' = U_C^{\\dagger}OU_C = \\sum_P c_P U_C^{\\dagger}PU_C$. In other words, part of the computation is performed classically via the evolution of the observable from $O$ to $O'$. The original problem can now be reformulated as measuring the observable $O'$ for the new lower depth circuit whose unitary is $U_Q$.\n",
     "\n",
-    "The unitary $U_C$ is represented as a number of slices $U_C = U_S U_{S-1}...U_2U_1$. There are multiple ways for defining a slice. For instance, in the above example circuit, each layer of $R_{zz}$ and each layer of $R_x$ gates can be considered as an individual slice. Backpropagation involves calculation of $O' = \\Pi_{s=1}^S \\sum_P c_P U_s^{\\dagger} P U_s$ classically. Each slice $U_s$ can be represented as $U_s = exp(\\frac{-i\\theta_s P_s}{2})$, where $P_s$ is a $n$-qubit Pauli and $\\theta_s$ is a scalar. It is easy to verify that \n",
+    "The unitary $U_C$ is represented as a number of slices $U_C = U_S U_{S-1}...U_2U_1$. There are multiple ways for defining a slice. For instance, in the above example circuit, each layer of $R_{zz}$ and each layer of $R_x$ gates can be considered as an individual slice. Backpropagation involves calculation of $O' = \\Pi_{s=1}^S \\sum_P c_P U_s^{\\dagger} P U_s$ classically. Each slice $U_s$ can be represented as $U_s = exp(\\frac{-i\\theta_s P_s}{2})$, where $P_s$ is a $n$-qubit Pauli and $\\theta_s$ is a scalar. It is easy to verify that\n",
     "\n",
     "$$\n",
     "U_s^{\\dagger} P U_s = P \\qquad \\text{if} ~[P,P_s] = 0,\n",
@@ -79,7 +79,9 @@
     "from qiskit.synthesis import LieTrotter\n",
     "\n",
     "from qiskit_addon_utils.problem_generators import generate_xyz_hamiltonian\n",
-    "from qiskit_addon_utils.problem_generators import generate_time_evolution_circuit\n",
+    "from qiskit_addon_utils.problem_generators import (\n",
+    "    generate_time_evolution_circuit,\n",
+    ")\n",
     "from qiskit_addon_utils.slicing import slice_by_gate_types, combine_slices\n",
     "from qiskit_addon_obp.utils.simplify import OperatorBudget\n",
     "from qiskit_addon_obp import backpropagate\n",
@@ -88,7 +90,7 @@
     "from rustworkx.visualization import graphviz_draw\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit_ibm_runtime import EstimatorV2, EstimatorOptions\n"
+    "from qiskit_ibm_runtime import EstimatorV2, EstimatorOptions"
    ]
   },
   {
@@ -135,7 +137,7 @@
    ],
    "source": [
     "num_qubits = 10\n",
-    "layout = [(i-1,i) for i in range(1, num_qubits)]\n",
+    "layout = [(i - 1, i) for i in range(1, num_qubits)]\n",
     "\n",
     "# Instantiate a CouplingMap object\n",
     "coupling_map = CouplingMap(layout)\n",
@@ -318,7 +320,8 @@
    ],
    "source": [
     "observable = SparsePauliOp.from_sparse_list(\n",
-    "    [(\"Z\", [i], 1/num_qubits) for i in range(num_qubits)], num_qubits=num_qubits\n",
+    "    [(\"Z\", [i], 1 / num_qubits) for i in range(num_qubits)],\n",
+    "    num_qubits=num_qubits,\n",
     ")\n",
     "observable"
    ]
@@ -360,10 +363,10 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Backpropagate slices onto the observable\n",
-    "bp_obs, remaining_slices, metadata = backpropagate(observable, slices, operator_budget=op_budget)\n",
+    "bp_obs, remaining_slices, metadata = backpropagate(\n",
+    "    observable, slices, operator_budget=op_budget\n",
+    ")\n",
     "# Recombine the slices remaining after backpropagation\n",
     "bp_circuit = combine_slices(remaining_slices)\n",
     "\n",
@@ -442,11 +445,16 @@
    "source": [
     "# Run the same experiment but truncate observable terms with small coefficients\n",
     "bp_obs_trunc, remaining_slices_trunc, metadata = backpropagate(\n",
-    "    observable, slices, operator_budget=op_budget, truncation_error_budget=truncation_error_budget\n",
+    "    observable,\n",
+    "    slices,\n",
+    "    operator_budget=op_budget,\n",
+    "    truncation_error_budget=truncation_error_budget,\n",
     ")\n",
     "\n",
     "# Recombine the slices remaining after backpropagation\n",
-    "bp_circuit_trunc = combine_slices(remaining_slices_trunc, include_barriers=False)\n",
+    "bp_circuit_trunc = combine_slices(\n",
+    "    remaining_slices_trunc, include_barriers=False\n",
+    ")\n",
     "\n",
     "print(f\"Backpropagated {metadata.num_backpropagated_slices} slices.\")\n",
     "print(\n",
@@ -487,7 +495,9 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -497,7 +507,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "\n",
     "# Transpile original experiment\n",
@@ -562,7 +571,9 @@
     "ideal_estimator = Estimator()\n",
     "\n",
     "# Run the experiments using Estimator primitive to obtain the exact outcome\n",
-    "result_exact = ideal_estimator.run([(circuit, observable)]).result()[0].data.evs.item()\n",
+    "result_exact = (\n",
+    "    ideal_estimator.run([(circuit, observable)]).result()[0].data.evs.item()\n",
+    ")\n",
     "print(f\"Exact expectation value: {result_exact}\")"
    ]
   },
@@ -571,7 +582,7 @@
    "id": "2c95ead4-3a9f-423b-b3ad-a9109a8420b2",
    "metadata": {},
    "source": [
-    "We shall use <a href=\"https://docs.quantum.ibm.com/guides/configure-error-mitigation\">resilience_level</a> = 2 for this example. "
+    "We shall use <a href=\"https://docs.quantum.ibm.com/guides/configure-error-mitigation\">resilience_level</a> = 2 for this example."
    ]
   },
   {
@@ -668,16 +679,20 @@
     }
    ],
    "source": [
-    "methods = ['No backpropagation', 'Backpropagation', 'Backpropagation w/ truncation']\n",
+    "methods = [\n",
+    "    \"No backpropagation\",\n",
+    "    \"Backpropagation\",\n",
+    "    \"Backpropagation w/ truncation\",\n",
+    "]\n",
     "values = [result_no_bp, result_bp, result_bp_trunc]\n",
     "stds = [std_no_bp, std_bp, std_bp_trunc]\n",
     "\n",
     "ax = plt.gca()\n",
-    "plt.bar(methods, values, color='#a56eff', width=0.4, edgecolor ='#8a3ffc')\n",
+    "plt.bar(methods, values, color=\"#a56eff\", width=0.4, edgecolor=\"#8a3ffc\")\n",
     "plt.axhline(result_exact)\n",
     "ax.set_ylim([0.6, 0.92])\n",
     "plt.text(0.2, 0.895, \"Exact result\")\n",
-    "ax.set_ylabel(r'$M_Z$', fontsize=12)"
+    "ax.set_ylabel(r\"$M_Z$\", fontsize=12)"
    ]
   },
   {
@@ -726,7 +741,7 @@
    ],
    "source": [
     "num_qubits = 50\n",
-    "layout = [(i-1,i) for i in range(1, num_qubits)]\n",
+    "layout = [(i - 1, i) for i in range(1, num_qubits)]\n",
     "\n",
     "# Instantiate a CouplingMap object\n",
     "coupling_map = CouplingMap(layout)\n",
@@ -858,7 +873,8 @@
    ],
    "source": [
     "observable = SparsePauliOp.from_sparse_list(\n",
-    "    [(\"Z\", [i], 1/num_qubits) for i in range(num_qubits)], num_qubits=num_qubits\n",
+    "    [(\"Z\", [i], 1 / num_qubits) for i in range(num_qubits)],\n",
+    "    num_qubits=num_qubits,\n",
     ")\n",
     "observable"
    ]
@@ -945,8 +961,9 @@
    "outputs": [],
    "source": [
     "op_budget = OperatorBudget(max_qwc_groups=15)\n",
-    "truncation_error_budget = setup_budget(max_error_total=0.03, \n",
-    "                                       max_error_per_slice=0.005)"
+    "truncation_error_budget = setup_budget(\n",
+    "    max_error_total=0.03, max_error_per_slice=0.005\n",
+    ")"
    ]
   },
   {
@@ -986,7 +1003,9 @@
     }
    ],
    "source": [
-    "bp_obs, remaining_slices, metadata = backpropagate(observable, slices, operator_budget=op_budget)\n",
+    "bp_obs, remaining_slices, metadata = backpropagate(\n",
+    "    observable, slices, operator_budget=op_budget\n",
+    ")\n",
     "bp_circuit = combine_slices(remaining_slices)\n",
     "\n",
     "print(f\"Backpropagated {metadata.num_backpropagated_slices} slices.\")\n",
@@ -1040,11 +1059,16 @@
    ],
    "source": [
     "bp_obs_trunc, remaining_slices_trunc, metadata = backpropagate(\n",
-    "    observable, slices, operator_budget=op_budget, truncation_error_budget=truncation_error_budget\n",
+    "    observable,\n",
+    "    slices,\n",
+    "    operator_budget=op_budget,\n",
+    "    truncation_error_budget=truncation_error_budget,\n",
     ")\n",
     "\n",
     "# Recombine the slices remaining after backpropagation\n",
-    "bp_circuit_trunc = combine_slices(remaining_slices_trunc, include_barriers=False)\n",
+    "bp_circuit_trunc = combine_slices(\n",
+    "    remaining_slices_trunc, include_barriers=False\n",
+    ")\n",
     "\n",
     "print(f\"Backpropagated {metadata.num_backpropagated_slices} slices.\")\n",
     "print(\n",
@@ -1104,9 +1128,15 @@
     }
    ],
    "source": [
-    "print(f'2-qubit depth of original circuit: {circuit_isa.depth(lambda x:x.operation.num_qubits==2)}')\n",
-    "print(f'2-qubit depth of backpropagated circuit: {bp_circuit_isa.depth(lambda x:x.operation.num_qubits==2)}')\n",
-    "print(f'2-qubit depth of backpropagated circuit with truncation: {bp_circuit_trunc_isa.depth(lambda x:x.operation.num_qubits==2)}')"
+    "print(\n",
+    "    f\"2-qubit depth of original circuit: {circuit_isa.depth(lambda x:x.operation.num_qubits==2)}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"2-qubit depth of backpropagated circuit: {bp_circuit_isa.depth(lambda x:x.operation.num_qubits==2)}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"2-qubit depth of backpropagated circuit with truncation: {bp_circuit_trunc_isa.depth(lambda x:x.operation.num_qubits==2)}\"\n",
+    ")"
    ]
   },
   {
@@ -1124,9 +1154,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs = [(circuit_isa, observable_isa),\n",
-    "        (bp_circuit_isa, bp_obs_isa),\n",
-    "        (bp_circuit_trunc_isa, bp_obs_trunc_isa)]"
+    "pubs = [\n",
+    "    (circuit_isa, observable_isa),\n",
+    "    (bp_circuit_isa, bp_obs_isa),\n",
+    "    (bp_circuit_trunc_isa, bp_obs_trunc_isa),\n",
+    "]"
    ]
   },
   {
@@ -1139,8 +1171,8 @@
     "options = EstimatorOptions()\n",
     "options.default_precision = 0.01\n",
     "options.resilience_level = 2\n",
-    "options.resilience.zne.noise_factors = [1,1.2,1.4]\n",
-    "options.resilience.zne.extrapolator = ['linear']\n",
+    "options.resilience.zne.noise_factors = [1, 1.2, 1.4]\n",
+    "options.resilience.zne.extrapolator = [\"linear\"]\n",
     "\n",
     "estimator = EstimatorV2(mode=backend, options=options)"
    ]
@@ -1225,15 +1257,19 @@
     }
    ],
    "source": [
-    "methods = ['No backpropagation', 'Backpropagation', 'Backpropagation w/ truncation']\n",
+    "methods = [\n",
+    "    \"No backpropagation\",\n",
+    "    \"Backpropagation\",\n",
+    "    \"Backpropagation w/ truncation\",\n",
+    "]\n",
     "values = [result_no_bp, result_bp, result_bp_trunc]\n",
     "\n",
     "ax = plt.gca()\n",
-    "plt.bar(methods, values, color='#a56eff', width=0.4, edgecolor ='#8a3ffc')\n",
+    "plt.bar(methods, values, color=\"#a56eff\", width=0.4, edgecolor=\"#8a3ffc\")\n",
     "plt.axhline(0.89)\n",
     "ax.set_ylim([0.6, 0.98])\n",
     "plt.text(0.2, 0.895, \"Exact result\")\n",
-    "ax.set_ylabel(r'$M_Z$', fontsize=12)"
+    "ax.set_ylabel(r\"$M_Z$\", fontsize=12)"
    ]
   },
   {
@@ -1263,11 +1299,9 @@
   }
  ],
  "metadata": {
-   "title": "Improving estimation of expectation values with Operator Backpropagation (OBP)",
- "description": "In this tutorial we will implement a Qiskit pattern for simulating the quantum dynamics of a Heisenberg spin chain using qiskit-addon-obp",
- "platform": "cloud",
+  "description": "In this tutorial we will implement a Qiskit pattern for simulating the quantum dynamics of a Heisenberg spin chain using qiskit-addon-obp",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1281,8 +1315,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
-  }
+   "version": "3"
+  },
+  "platform": "cloud",
+  "title": "Improving estimation of expectation values with Operator Backpropagation (OBP)"
  },
  "nbformat": 4,
  "nbformat_minor": 5
