Lint and ignore

--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -10,6 +10,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e02999d",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users;\n",
+    "# it disables linting rules.\n",
+    "# ruff: noqa"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "26ca3c30",
    "metadata": {},
