--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -15,6 +15,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82f9be30",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users;\n",
+    "# it disables a linting rule that we should fix.\n",
+    "# ruff: noqa: E722"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "619fd9f9",
    "metadata": {},
@@ -76,7 +92,6 @@
     "    ClassicalRegister,\n",
     ")\n",
     "from qiskit.primitives import BitArray\n",
-    "from qiskit.visualization import *\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
@@ -102,8 +117,6 @@
     "\n",
     "from qiskit.quantum_info import Pauli, PauliList\n",
     "from qiskit.result import marginal_counts\n",
-    "\n",
-    "%matplotlib inline\n",
     "\n",
     "import warnings\n",
     "\n",
