--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -1116,16 +1116,11 @@
    "id": "337b200e-fb7c-4dad-9e8a-4c96099287ba",
    "metadata": {},
    "source": [
-    "## Tutorial Survey\n",
+    "## Tutorial survey\n",
     "\n",
-    "<table style=\"width: 100%;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td valign=\"top\" style=\"width: 10%;\"><img src=\"https://learning-api.quantum.ibm.com/assets/53171443-b07b-4ae6-a4be-9aec32a854f5\" alt=\"Survey\" width=\"100%\" height=\"100%\"></td>\n",
-    "<td valign=\"top\"  style=\"width: 80%;\"><strong><a title=\"Tutorial Survey\" href=\"https://your.feedback.ibm.com/jfe/form/SV_0igXMtMCQfApgDI\" target=\"_blank\">Tutorial Survey</a></strong><p><p>Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_0igXMtMCQfApgDI)"
    ]
   },
   {
