--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -5,6 +5,8 @@
    "id": "5f9e3f0d-7cc1-4ea7-826b-35dd2a87af1e",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore simeq  // This in an equation and isn't being ignored correctly */}\n",
+    "\n",
     "# Improving estimation of expectation values with Operator Backpropagation (OBP)\n",
     "*Usage estimate: 16 minutes on IBM Nazca (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -312,7 +314,7 @@
    "source": [
     "#### Backpropagate slices from the circuit\n",
     "\n",
-    "First we specify the observable to be $M_Z = \\frac{1}{N} \\sum_{i=1}^N \\langle Z_i \\rangle$, $N$ being the nunber of qubits. We will backpropagate slices from the time-evolution circuit until the terms in the observable can no longer be combined into 8 or fewer qubit-wise commuting Pauli groups."
+    "First we specify the observable to be $M_Z = \\frac{1}{N} \\sum_{i=1}^N \\langle Z_i \\rangle$, $N$ being the number of qubits. We will backpropagate slices from the time-evolution circuit until the terms in the observable can no longer be combined into 8 or fewer qubit-wise commuting Pauli groups."
    ]
   },
   {
@@ -498,7 +500,7 @@
    "id": "1e258829-af9f-43ad-8c79-9455243d7ced",
    "metadata": {},
    "source": [
-    "#### Now that we have our reduced ansatze and expanded observables, we can transpile our experiments to the backend.\n",
+    "#### Now that we have our reduced ansatz and expanded observables, we can transpile our experiments to the backend.\n",
     "\n",
     "Here we will use a 127-qubit IBM Quantum hardware to demonstrate how to transpile to a QPU backend."
    ]
