--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -10,6 +10,8 @@
     }
    },
    "source": [
+    "{/* cspell:ignore XIXI, IZIZ, XZXZ, YZYI, ZZZI, YIYZ, ZIZZ, IXXX, XYIY, IYXY, ZYYX, YYZX, ZXYY, YXZY */}\n",
+    "\n",
     "# Long-range entanglement with limited qubit connectivity\n",
     "*Usage estimate: 90 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -391,7 +393,7 @@
     "\n",
     "# Set the number of repetitions of each circuit, for sampling.\n",
     "# The number of qubits between the control and target are grouped into blocks\n",
-    "# of length 4. The provided min and max number of qunbits will be modified to\n",
+    "# of length 4. The provided min and max number of qubits will be modified to\n",
     "# align with these block sizes.\n",
     "SHOTS = 1000\n",
     "\n",
@@ -442,7 +444,7 @@
     "\n",
     "    Arg:\n",
     "        circuits (List[QuantumCircuit]: List of 4 Quantum Circuits with at least two data qubits\n",
-    "        P_prep (PauliList): A pair of single qubit Paulis with the first Pauli refered to as P_i and the second as P_j\n",
+    "        P_prep (PauliList): A pair of single qubit Paulis with the first Pauli referred to as P_i and the second as P_j\n",
     "\n",
     "    Returns:\n",
     "        List[QuantumCircuits]\n",
@@ -476,7 +478,7 @@
     "\n",
     "    Arg:\n",
     "        circuits (List[QuantumCircuit]: List of 4 Quantum Circuits with at least two data qubits\n",
-    "        P_meas (PauliList): A pair of single qubit Paulis with the first Pauli refered to as P_k and the second as P_l\n",
+    "        P_meas (PauliList): A pair of single qubit Paulis with the first Pauli referred to as P_k and the second as P_l\n",
     "    \"\"\"\n",
     "    pauliX = Pauli(\"X\")\n",
     "    pauliY = Pauli(\"Y\")\n",
@@ -527,7 +529,7 @@
     "def CNOT_unitary(\n",
     "    qc: QuantumCircuit, control_qubit: int, target_qubit: int\n",
     ") -> QuantumCircuit:\n",
-    "    \"\"\"Generate a CNOT gate bewteen data qubit control_qubit and data qubit target_qubit using local CNOTs\n",
+    "    \"\"\"Generate a CNOT gate between data qubit control_qubit and data qubit target_qubit using local CNOTs\n",
     "\n",
     "    Assumes that the long-range CNOT gate will be spanning a 1D chain of n-qubits subject to nearest-neighbor\n",
     "    connections only with the chain starting at the control qubit and finishing at the target qubit.\n",
@@ -628,7 +630,7 @@
     "        circuits = [QuantumCircuit(n + 2, 2) for i in range(4)]\n",
     "        circuits = prep_P_ij_conj(\n",
     "            circuits, P_prep\n",
-    "        )  # Prepare circuits in eignestates P_i^* and P_j^*\n",
+    "        )  # Prepare circuits in eigenstates P_i^* and P_j^*\n",
     "        circuits = [\n",
     "            CNOT_unitary(circuit, 0, n + 1) for circuit in circuits\n",
     "        ]  # Add long range CNOT\n",
@@ -707,9 +709,9 @@
     "    c2: Optional[ClassicalRegister] = None,\n",
     "    add_barriers: Optional[bool] = True,\n",
     ") -> QuantumCircuit:\n",
-    "    \"\"\"Generate a CNOT gate bewteen data qubit control_qubit and data qubit target_qubit using Bell Pairs.\n",
+    "    \"\"\"Generate a CNOT gate between data qubit control_qubit and data qubit target_qubit using Bell Pairs.\n",
     "\n",
-    "    Post processing is used to enable the CNOT gate via the provided classicial registers c1 and c2\n",
+    "    Post processing is used to enable the CNOT gate via the provided classical registers c1 and c2\n",
     "\n",
     "    Assumes that the long-range CNOT gate will be spanning a 1D chain of n-qubits subject to nearest-neighbor\n",
     "    connections only with the chain starting at the control qubit and finishing at the target qubit.\n",
@@ -726,7 +728,7 @@
     "        target_qubi (int) : The qubit targeted by the gate.\n",
     "\n",
     "    Optional Args:\n",
-    "        c1 (ClassicialRegister) : Default = None. Required if n > 1. Register requires k bits\n",
+    "        c1 (ClassicalRegister) : Default = None. Required if n > 1. Register requires k bits\n",
     "        c2 (ClassicalRegister) : Default = None. Required if n > 0. Register requires n - k bits\n",
     "        add_barriers (bool) : Default = True. Include barriers before and after long range CNOT\n",
     "\n",
@@ -737,7 +739,7 @@
     "    n = target_qubit - control_qubit - 1\n",
     "    k = int(n / 2)\n",
     "\n",
-    "    # Deteremine where to start the bell pairs and\n",
+    "    # Determine where to start the bell pairs and\n",
     "    # add an extra CNOT when n is odd\n",
     "    if n % 2 == 0:\n",
     "        x0 = 1\n",
@@ -800,15 +802,15 @@
     "    )  # Circuit with n qubits between control and target\n",
     "    cr = ClassicalRegister(\n",
     "        2, name=\"cr\"\n",
-    "    )  # Classicial register for measuring long range CNOT\n",
+    "    )  # Classical register for measuring long range CNOT\n",
     "\n",
     "    k = int(n / 2)  # Number of Bell States to be used\n",
     "    c1 = ClassicalRegister(\n",
     "        k, name=\"c1\"\n",
-    "    )  # Classicial register needed for post processing\n",
+    "    )  # Classical register needed for post processing\n",
     "    c2 = ClassicalRegister(\n",
     "        n - k, name=\"c2\"\n",
-    "    )  # Classicial register needed for post processing\n",
+    "    )  # Classical register needed for post processing\n",
     "\n",
     "    # 16 Paulis with non-zero expectation value to prepare and measure\n",
     "    P_lkji = PauliList(\n",
@@ -848,7 +850,7 @@
     "        circuits = prep_P_ij_conj(\n",
     "            circuits, P_prep\n",
     "        )  # Prepare control and target qubits\n",
-    "        # in eignestates of P_i^* and P_j^* respectively\n",
+    "        # in eigenstates of P_i^* and P_j^* respectively\n",
     "        circuits = [\n",
     "            CNOT_postproc(\n",
     "                qc=circuit, control_qubit=0, target_qubit=n + 1, c1=c1, c2=c2\n",
@@ -933,9 +935,9 @@
     "    c2: Optional[ClassicalRegister] = None,\n",
     "    add_barriers: Optional[bool] = True,\n",
     ") -> QuantumCircuit:\n",
-    "    \"\"\"Generate a CNOT gate bewteen data qubit control_qubit and data qubit target_qubit using Bell Pairs.\n",
+    "    \"\"\"Generate a CNOT gate between data qubit control_qubit and data qubit target_qubit using Bell Pairs.\n",
     "\n",
-    "    Post processing is used to enable the CNOT gate via the provided classicial registers c1 and c2\n",
+    "    Post processing is used to enable the CNOT gate via the provided classical registers c1 and c2\n",
     "\n",
     "    Assumes that the long-range CNOT gate will be spanning a 1D chain of n-qubits subject to nearest-neighbor\n",
     "    connections only with the chain starting at the control qubit and finishing at the target qubit.\n",
@@ -952,14 +954,14 @@
     "        target_qubi (int) : The qubit targeted by the gate.\n",
     "\n",
     "    Optional Args:\n",
-    "        c1 (ClassicialRegister) : Default = None. Required if n > 1. Register requires k bits\n",
+    "        c1 (ClassicalRegister) : Default = None. Required if n > 1. Register requires k bits\n",
     "        c2 (ClassicalRegister) : Default = None. Required if n > 0. Register requires n - k bits\n",
     "        add_barriers (bool) : Default = True. Include barriers before and after long range CNOT\n",
     "\n",
     "    Note: This approached uses two if_test statements. A better (more performant) approach is\n",
-    "    to have the parity values combined into a single classicial register and then use a switch\n",
+    "    to have the parity values combined into a single classical register and then use a switch\n",
     "    statement. This was done in the associated paper my modifying the qasm file directly. The ability\n",
-    "    to use a switch statement via Qiakit in this way is a future release capability.\n",
+    "    to use a switch statement via Qiskit in this way is a future release capability.\n",
     "\n",
     "    Returns:\n",
     "        QuantumCircuit\n",
@@ -971,7 +973,7 @@
     "    if add_barriers is True:\n",
     "        qc.barrier()\n",
     "\n",
-    "    # Deteremine where to start the bell pairs and\n",
+    "    # Determine where to start the bell pairs and\n",
     "    # add an extra CNOT when n is odd\n",
     "    if n % 2 == 0:\n",
     "        x0 = 1\n",
@@ -1048,15 +1050,15 @@
     "    )  # Circuit with n qubits between control and target\n",
     "    cr = ClassicalRegister(\n",
     "        2, name=\"cr\"\n",
-    "    )  # Classicial register for measuring long range CNOT\n",
+    "    )  # Classical register for measuring long range CNOT\n",
     "\n",
     "    k = int(n / 2)  # Number of Bell States to be used\n",
     "    c1 = ClassicalRegister(\n",
     "        k, name=\"c1\"\n",
-    "    )  # Classicial register needed for post processing\n",
+    "    )  # Classical register needed for post processing\n",
     "    c2 = ClassicalRegister(\n",
     "        n - k, name=\"c2\"\n",
-    "    )  # Classicial register needed for post processing\n",
+    "    )  # Classical register needed for post processing\n",
     "\n",
     "    # 16 Paulis with non-zero expectation value to prepare and measure\n",
     "    P_lkji = PauliList(\n",
@@ -1096,7 +1098,7 @@
     "        circuits = prep_P_ij_conj(\n",
     "            circuits, P_prep\n",
     "        )  # Prepare control and target qubits\n",
-    "        # in eignestates of P_i^* and P_j^* respectively\n",
+    "        # in eigenstates of P_i^* and P_j^* respectively\n",
     "        circuits = [\n",
     "            CNOT_dyn(\n",
     "                qc=circuit, control_qubit=0, target_qubit=n + 1, c1=c1, c2=c2\n",
@@ -1979,15 +1981,15 @@
     "                        else:\n",
     "                            s_eig = (-1) ** s\n",
     "\n",
-    "                        strr = str(r)\n",
-    "                        strs = str(s)\n",
+    "                        str_r = str(r)\n",
+    "                        str_s = str(s)\n",
     "                        try:\n",
     "                            exp += (\n",
     "                                p_eig\n",
     "                                * q_eig\n",
     "                                * s_eig\n",
     "                                * r_eig\n",
-    "                                * counts_post[strs + strr]\n",
+    "                                * counts_post[str_s + str_r]\n",
     "                                / shots\n",
     "                                / 4\n",
     "                                / sign_rho_lkji[samples[i]]\n",
@@ -2291,7 +2293,7 @@
    "source": [
     "#### Plot from Paper\n",
     "\n",
-    "![Plot of teleported gate fideilty against the number of qubits.](/images/tutorials/long-range-entanglement-with-limited-qubit-connectivity/paper-plot.avif)"
+    "![Plot of teleported gate fidelity against the number of qubits.](/images/tutorials/long-range-entanglement-with-limited-qubit-connectivity/paper-plot.avif)"
    ]
   },
   {
@@ -2324,7 +2326,7 @@
     "\n",
     "$$\\mathcal{F}_{avg}(\\mathcal{U},\\xi):=\\mathcal{F}_{avg}(\\mathcal{U}^\\dagger\\circ\\xi) := \\int\\langle\\phi|(\\mathcal{U}^\\dagger\\circ\\xi)(|\\phi\\rangle\\langle\\phi|)|\\phi\\rangle d\\phi$$\n",
     "\n",
-    "To calculate the average gate fideilty of the channel $\\mathcal{U}^\\dagger\\circ\\xi$ we use a result of Horodecki et al. [3] which relates the average gate fidelity to the entanglement fedilty of a channel. The entanglement fidelity of the channel $\\mathcal{U}^\\dagger\\circ\\xi$ is defined as\n",
+    "To calculate the average gate fidelity of the channel $\\mathcal{U}^\\dagger\\circ\\xi$ we use a result of Horodecki et al. [3] which relates the average gate fidelity to the entanglement fedilty of a channel. The entanglement fidelity of the channel $\\mathcal{U}^\\dagger\\circ\\xi$ is defined as\n",
     "\n",
     "$$\n",
     "\\mathcal{F}_{ent}(\\mathcal{U}^\\dagger\\circ\\xi) := \\mathcal{F}_{ent}(\\rho_{\\mathcal{U}^\\dagger\\circ\\xi}) :=\\langle\\psi_+|\\rho_{\\mathcal{U}^\\dagger\\circ\\xi}|\\psi_+\\rangle = \\mathrm{Tr}(\\mathcal{U}^\\dagger\\circ\\xi)/d^2.\n",
@@ -2341,7 +2343,7 @@
     "$$\n",
     "|\\psi_+\\rangle = \\frac{1}{\\sqrt{d}}\\sum_{i=0}^{d-1}|i\\rangle \\otimes |i\\rangle.\n",
     "$$\n",
-    "In our specific situation, where $\\mathcal{U}$ is a unitary channel, the entanglement fedility of $\\mathcal{U}^\\dagger\\circ\\xi$ can be written in terms of the *process fidelity* of the two Choi states $\\rho_\\mathcal{U}$ and $\\rho_{\\xi}$ as follows:\n",
+    "In our specific situation, where $\\mathcal{U}$ is a unitary channel, the entanglement fidelity of $\\mathcal{U}^\\dagger\\circ\\xi$ can be written in terms of the *process fidelity* of the two Choi states $\\rho_\\mathcal{U}$ and $\\rho_{\\xi}$ as follows:\n",
     "$$\n",
     "\\mathcal{F}_{ent}(\\mathcal{U}^\\dagger\\circ\\xi) = \\mathcal{F}_{proc}(\\rho_\\mathcal{U}, \\rho_{\\xi}) := \\mathcal{F}(\\rho_\\mathcal{U}, \\rho_{\\xi})\n",
     "$$\n",
@@ -2365,7 +2367,7 @@
     "= \\frac{1}{d}\\mathrm{Tr}\\bigl[(P_k\\otimes P_l)\\cdot \\xi(P_i^*\\otimes P_j^*)\\bigl]\n",
     "$$\n",
     "\n",
-    "The following three experiments use the modified and simplified version of Monte Carlo state certification combined with the relations derived above to calculate the average gate fedility of the channel $\\xi$. For more details see [1] and associated references."
+    "The following three experiments use the modified and simplified version of Monte Carlo state certification combined with the relations derived above to calculate the average gate fidelity of the channel $\\xi$. For more details see [1] and associated references."
    ]
   },
   {
