--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -1108,7 +1108,7 @@
    "source": [
     "## References\n",
     "\n",
-    "[\\[1\\]](#Reference1) IBM Quantum. \"Qiskit Performance and Scaling: A Closer Look.\" IBM Quantum Blog, https://www.ibm.com/quantum/blog/qiskit-performance."
+    "[1] IBM Quantum. \"Qiskit Performance and Scaling: A Closer Look.\" IBM Quantum Blog, https://www.ibm.com/quantum/blog/qiskit-performance."
    ]
   },
   {
