--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -2377,15 +2377,15 @@
    "source": [
     "## References\n",
     "\n",
-    "[\\[1\\]](#Reference1) Efficient Long-Range Entanglement using Dynamic Circuits, by\n",
+    "[1] Efficient Long-Range Entanglement using Dynamic Circuits, by\n",
     "*Elisa Bäumer, Vinay Tripathi, Derek S. Wang, Patrick Rall, Edward H. Chen, Swarnadeep Majumder, Alireza Seif, Zlatko K. Minev*. IBM Quantum, (2023).\n",
     "https://arxiv.org/abs/2308.13065\n",
     "\n",
-    "[\\[2\\]](#Reference2) Quantum Computation and Quantum Information, by *Nielsen and Chuang*, Section 9.2.2, (2010)\n",
+    "[2] Quantum Computation and Quantum Information, by *Nielsen and Chuang*, Section 9.2.2, (2010)\n",
     "\n",
-    "[\\[3\\]](#Reference3) General teleportation channel, singlet fraction, and quasidistillation, by *M. Horodecki, P. Horodecki, and R. Horodecki*, Phys. Rev. A 60, 1888 (1999).\n",
+    "[3] General teleportation channel, singlet fraction, and quasidistillation, by *M. Horodecki, P. Horodecki, and R. Horodecki*, Phys. Rev. A 60, 1888 (1999).\n",
     "\n",
-    "[\\[4\\]](#Reference4) Practical characterization of quantum devices without tomography, by *M. P. da Silva, O. Landon-Cardinal, and D. Poulin*, Phys. Rev. Lett. 107, 210404 (2011)."
+    "[4] Practical characterization of quantum devices without tomography, by *M. P. da Silva, O. Landon-Cardinal, and D. Poulin*, Phys. Rev. Lett. 107, 210404 (2011)."
    ]
   },
   {
