--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -6,6 +6,8 @@
    "id": "aed5a4ec-3fb1-46d3-85eb-65f2d80d8279",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore fontsize */}\n",
+    "\n",
     "# AI Transpiler Introduction\n",
     "*Estimated QPU usage: None (NOTE: no execution was done in this notebook as notebook is focused on the transpilation process)*\n",
     "\n",
