--- a/docs/tutorials/heisenberg-chain.ipynb
+++ b/docs/tutorials/heisenberg-chain.ipynb
@@ -153,18 +153,18 @@
     "coupling = backend.target.build_coupling_map()\n",
     "reduced_coupling = coupling.reduce(list(range(num_spins)))\n",
     "\n",
-    "edgelist = reduced_coupling.graph.edge_list()\n",
-    "hamlist = []\n",
+    "edge_list = reduced_coupling.graph.edge_list()\n",
+    "ham_list = []\n",
     "\n",
-    "for edge in edgelist:\n",
-    "    hamlist.append((\"ZZ\", edge, 0.5))\n",
-    "    hamlist.append((\"YY\", edge, 0.5))\n",
-    "    hamlist.append((\"XX\", edge, 0.5))\n",
+    "for edge in edge_list:\n",
+    "    ham_list.append((\"ZZ\", edge, 0.5))\n",
+    "    ham_list.append((\"YY\", edge, 0.5))\n",
+    "    ham_list.append((\"XX\", edge, 0.5))\n",
     "\n",
     "for qubit in reduced_coupling.physical_qubits:\n",
-    "    hamlist.append((\"Z\", [qubit], np.random.random() * 2 - 1))\n",
+    "    ham_list.append((\"Z\", [qubit], np.random.random() * 2 - 1))\n",
     "\n",
-    "hamiltonian = SparsePauliOp.from_sparse_list(hamlist, num_qubits=num_spins)\n",
+    "hamiltonian = SparsePauliOp.from_sparse_list(ham_list, num_qubits=num_spins)\n",
     "\n",
     "ansatz.draw(\"mpl\", style=\"iqp\")"
    ]
