--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -32,14 +32,13 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 **10 April 2025**
 
 - Updated navigation to remove duplicated pages:
-  - The Administration section has been paired down to focus on the management of users and access groups, and is now called “Access management”.
-  - There is now only one page each for managing instances and workloads, and what you can view and manage on each page is dependent on your access and permissions.
-  - The analytics page for account administrators has been moved into the main navigation menu, to make it easier to find.
-- Enhancements in the access management section:
-  - Administrators can now add or remove multiple users in your account at once from an access group
-- Launched two new QPUs: ibm_aachen and ibm_kingston
-- Individuals with access to the analytics page can now filter the data to view info per plan (this is not yet there, but it will be soon)
-- Administrators of Premium plan instances can now “set as limit” the instance allocation, so that usage in those instances cannot exceed the time alloted.
+  - The Administration section has been renamed "Access management" and focuses on managing users and access groups.
+  - There is only one page each for managing instances and workloads; there is no longer a separate page for administrators.  Instead, what you can view and manage on each page is dependent on your access and permissions.
+  - The analytics page (visible only to those with certain accesss) has been moved into the main navigation menu, to make it easier to find.
+- Launched two new QPUs: ibm_aachen (eu-de) and ibm_kingston (us-east)
+- Individuals who can view the analytics page can now filter the data to view information per plan.
+- Administrators can easily add multiple account members to an access group.
+- Premium plan instance administrators can set the instance allocation as a usage limit, so that usage in those instances cannot exceed the time alloted. See the [Set instance allocation limits](/guides/allocation-limits) guide for instructions.
 
 **27 March 2025**
 
